# diabetes-readmission-prediction

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: data_processing_pipeline.py
data/interim/: model1_train_set_wo_impact_encoding.csv  model2_train_set_wo_impact_encoding.csv
data/processed/: final_test_set.csv  model1_test_set.csv  model1_test_set_scaled.csv  model1_train_set.csv  model1_train_set_scaled.csv  model2_test_set.csv  model2_test_set_scaled.csv  model2_train_set.csv  model2_train_set_scaled.csv
notebooks/: 00-Complete_ML_Pipeline_for_Diabetic_Readmission_Prediction.ipynb  01-Exploratory_data_analysis.ipynb  02-Data_Manipulation-missing_values_and_outliers.ipynb  03-Data_Manipulation-handling_categoricals_and_scaling.ipynb  04-Model_Training_and_Evaluation.ipynb
