[tool.poetry]
name = "diabetes-readmission-prediction"
version = "0.1.0"
description = ""
authors = ["diegoleon <diego.leon07@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
ruff = "^0.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
